--- a/css/style.css
+++ b/css/style.css
@@ -951,3 +951,20 @@
     left: 0;
     color: #fff;
 }
+
+/*restore*/
+.restore{
+	width: 400px;
+}
+
+.restore__header{
+	color: #fff;
+	text-align: center;
+	margin-bottom: 20px;
+}
+
+.restore input.restore__submit{
+	margin: 0 auto;
+	width: 200px;
+	display: block;
+}
