--- a/css/lk-style.css
+++ b/css/lk-style.css
@@ -541,7 +541,20 @@ textarea.well{
     padding: 5px;
 }
 
-.log-reg a{
-    padding-bottom: 20px;
-    display: block;
+.attention{
+    text-align: center;
+    border: 3px solid #5495c6;
+    border-radius: 4px;
+    margin-top: 20px;
+}
+
+.attention h2{
+    font-weight: 600;
+    color:#5495c6;
+    text-transform: uppercase;
+}
+
+.attention h4{
+    color:#5495c6;
+    text-transform: uppercase;
 }
